--- a/styles/infoCards.css
+++ b/styles/infoCards.css
@@ -33,18 +33,17 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  width: fit-content;
-  font-family: "Garamond", serif;
   font-weight: 700;
   color: rgb(76 76 76);
+  width: 100%;
 }
 
 .CardDate div:first-child {
   font-size: 64px;
 }
 
-.CardDate div:last-child{
-  font-size: 32px;
+.CardDate div:last-child {
+  font-size: 1.8rem;
   font-weight: 500;
 }
 
@@ -52,6 +51,7 @@
   width: 320px;
   height: 240px;
   border-radius: 12px;
+  object-fit: cover;
 }
 
 .CardInfoText p:first-child {
@@ -128,7 +128,8 @@
 .CardFirstBox {
   display: flex;
   align-items: center;
-  gap: 62px;
+  justify-content: space-between;
+  min-width: 470px;
 }
 
 .contentCardBox {
@@ -202,4 +203,24 @@
   .CardAllInfo {
     width: 400px;
   }
+}
+
+.poster .btn-more-container {
+  transition: 0.5s ease;
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.poster .btn-more {
+  transition: 0.5s ease;
+  background: rgb(185, 185, 185);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  width: 100px;
+  height: 30px;
+}
+
+.extra-cards {
+  display: none;
 }
