Solved a small issue with cards from poster section

--- a/styles/infoCards.css
+++ b/styles/infoCards.css
@@ -221,6 +221,12 @@
   height: 30px;
 }
 
+.extra-cards-box {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
 .extra-cards {
   display: none;
 }
