--- a/styles/shortsAnonses.css
+++ b/styles/shortsAnonses.css
@@ -34,8 +34,12 @@
   flex-direction: row;
   align-items: center;
   gap: 27px;
+  padding: 5px;
+  border-radius: 10px;
 }
-
+.anonsesBox:hover {
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
 .anonsesDate {
   display: flex;
   flex-direction: column;
@@ -73,6 +77,8 @@
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 24px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 @media (max-width: 880px) {
