--- a/styles/shortsAnonses.css
+++ b/styles/shortsAnonses.css
@@ -24,7 +24,7 @@
 }
 
 .anonsesText .shortsText {
-  font-size: 48px;
+  font-size: 2rem;
   font-weight: 700;
   font-family: "EB Garamond", serif;
 }
@@ -87,6 +87,40 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 24px;
+  }
+}
+@media (max-width: 1108px) {
+  .anonsesdodo {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 801px) {
+  .anonsesDate {
+    width: 80px;
+    height: 78px;
+  }
+  .anonsesDate p:last-child {
+    font-size: 0.9rem;
+  }
+  .anonsesBox {
+    gap: 10px;
+  }
+  .anonsesBox {
+    width: 100%;
+  }
+}
+@media (max-width: 728px) {
+  .anonsesDate {
+    width: 70px;
+    height: 68px;
+  }
+  .anonsesBox div:last-child p {
+    font-size: 0.7rem;
+  }
+}
+@media (max-width: 728px) {
+  .anonsesdodo {
+    grid-template-columns: 1fr;
   }
 }
 
