--- a/styles/infoCards.css
+++ b/styles/infoCards.css
@@ -129,7 +129,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* width: 480px; */
+  width: 480px;
 }
 
 .contentCardBox {
@@ -198,6 +198,7 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: flex-start;
+    width: fit-content;
   }
 
   .CardImg {
