Made changes in the popup of the brief section and added media query

--- a/styles/newsCalendar.css
+++ b/styles/newsCalendar.css
@@ -215,12 +215,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 720px;
   }
 }
 @media (max-width: 586px) {
   .calendar {display: none;}
   .minipage {
-    height: 100%;
+    height: 800%;
+  }
+  .minipageBox {
+    margin-bottom: 50px;
   }
 }
 
