--- a/styles/shortsAnonses.css
+++ b/styles/shortsAnonses.css
@@ -111,15 +111,9 @@
   }
 }
 @media (max-width: 728px) {
-  .anonsesDate {
-    width: 70px;
-    height: 68px;
-  }
   .anonsesBox div:last-child p {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
   }
-}
-@media (max-width: 728px) {
   .anonsesdodo {
     grid-template-columns: 1fr;
   }
@@ -137,35 +131,13 @@
   border: 1px solid black;
   border-radius: 10px;
   z-index: 10;
-  background-color: white;
-  width: 500px;
-  max-width: 85%;
+  background-color: rgb(255, 255, 255);
+  width: 450px;
+  border: none;
 }
 
 .anounce-modal.active {
   transform: translate(-50%, -50%) scale(1);
-}
-.modal-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 15px;
-  align-items: center;
-  border-bottom: 1px solid black;
-}
-.modal-section {
-  padding: 10px 15px;
-}
-
-.modal-header .title {
-  font-size: 1.20rem;
-  font-weight: bold;
-}
-.modal-header .btn-close {
-  cursor: pointer;
-  border: none;
-  font-size: 1.20rem;
-  width: 20px;
-  height: 20px;
 }
 
 .overlay {
@@ -178,8 +150,95 @@
   bottom: 0;
   background-color: black;
   pointer-events: none;
+  
 }
 .overlay.active {
   opacity: 0.4;
   pointer-events: all;
+}
+
+.modal_box-title {
+  background-color: #efefefbf;
+  border-radius: 5px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px;
+  font-size: 1.3rem;
+  font-weight: 700;
+  font-family: "EB Garamond", serif;
+  color: rgb(1, 1, 1);
+}
+
+.modal_box-date {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.modal_box-date div:first-child {
+  font-size: 2.2rem;
+  font-weight: 700;
+  font-family: "EB Garamond", serif;
+  color: rgb(1, 1, 1);
+}
+.modal_box-date div:last-child {
+  font-size: 1.3rem;
+  font-weight: 700;
+  font-family: "EB Garamond", serif;
+  color: rgb(1, 1, 1);
+}
+
+.modal-img {
+  border-radius: 10px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  width: 450px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.cross-icon {
+  padding: 3px;
+  cursor: pointer;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  color: white;
+}
+
+.modal_description {
+  background-color: #efefefbf;
+  border-radius: 5px;
+  margin: 10px;
+  font-family: "EB Garamond", serif;
+  font-size: 1.2rem;
+  margin-bottom: 50px;
+}
+
+.anonsesDate p:first-child {
+  font-size: 32px;
+  font-weight: 700;
+  font-family: "EB Garamond", serif;
+  color: white;
+}
+
+.anonsesDate p:last-child {
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "EB Garamond", serif;
+  color: white;
+}
+
+@media (max-width: 723px) {
+  .modal-img {
+    width: 300px;
+  }
+  .anounce-modal {
+    width: 300px;
+  }
+  .modal_box-title {
+    font-size: 1rem;
+  }
 }
