--- a/styles/infoCards.css
+++ b/styles/infoCards.css
@@ -250,16 +250,22 @@
   display: none;
 }
 
+/* popup */
+
 .tickets-popup {
-  display: none;
+  border-radius: 1rem;
+  padding: 20px;
+  width: 500px;
   z-index: 11;
   background: white;
-}
-.tickets-popup.active {
-  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  display: none;
 }
 
-.tickets-popup-overlay.active{
+.tickets-popup-overlay.active {
   display: block;
   background: #05cdab;
   position: fixed;
@@ -269,3 +275,81 @@
   right: 0;
   z-index: 10;
 }
+
+.cross-close-btn-box {
+  display: none;
+}
+
+.cross-btn-icon {
+  z-index: 12; position: fixed;
+  top: 1rem;
+  right: 1rem;
+  font-size: 2rem;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.tickets-popup_header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 2rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-bottom: 50px;
+}
+
+.tickets-popup_date {
+  line-height: 2rem;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+}
+
+.tickets-popup_date p:first-child {
+  font-size: 2.5rem;
+}
+
+.tickets-popup_name {
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.tickets-popup-card-title {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  color: hsl(222, 4%, 53%);
+  font-size: 1rem;
+  margin-bottom: 0.9rem;
+}
+
+.tickets-popup-card-title input {
+  border-radius: 10px;
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 1.1rem;
+  margin-top: 10px;
+  background: rgb(219, 221, 225);
+}
+.tickets-popup-card-title input::placeholder {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(117, 114, 114);
+  font-size: 1rem;
+}
+
+.tickets-popup_card-input-box {
+  display: grid;
+  grid-template-columns: 1fr 100px;
+  gap: 5px;
+}
+
+.tickets-popup_content button {
+  font-size: 1.4rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  letter-spacing: 1px;
+  font-weight: 500;
+  border-radius: 1rem;
+  width: 100%;
+  height: 60px;
+}
+
