--- a/styles/infoCards.css
+++ b/styles/infoCards.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'OpenSans';
+  src: url(/fonts/OpenSans-VariableFont_wdth\,wght.ttf);
+  font-weight: 500;
+
+  font-family: 'Montserrat';
+  src: url(/fonts/Montserrat-VariableFont_wght.ttf);
+  font-weight: 400;
+}
+
 .infoboxTitel{
   display: flex;
   flex-direction: row;
@@ -323,6 +333,7 @@
 }
 
 .tickets-popup-card-title input {
+  
   border-radius: 10px;
   width: 100%;
   border: none;
@@ -353,3 +364,105 @@
   height: 60px;
 }
 
+/* new window btn result */
+
+/* .window-overlay {
+  position: fixed;
+  background-color: rgb(0, 0, 0);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+} */
+
+/* active propertie */
+
+.window-order-ticket {
+  display: none;
+  width: fit-content;
+  height: 300px;
+  position: fixed;
+  /* bottom: -153px;
+  left: 230px; */
+  bottom: -300px;
+  left: -300px;
+  transform: translate(-50%, -50%) scale(1);
+  z-index: 2;
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+.window-card-box {
+  width: 425px;
+}
+.window-order_header {
+  background: snow;
+  width: 100%;
+  height: 125px;
+  margin-bottom: -1px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+  padding-bottom: 2rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  font-size: 2rem;
+  color: rgb(0, 174, 255);
+  letter-spacing: 1.1111px;
+}
+.window-order_section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  width: 100%;
+  height: 175px;
+
+  background: linear-gradient(to left, hsl(193, 100%, 69%), hsl(200deg 97.56% 51.76%));
+  color: white;
+  font-family: 'OpenSans', sans-serif;
+  font-size: 1.2rem;
+}
+
+.window-order_logobox-parent {
+  position: fixed;
+  top: 8.1rem;
+  right: 30%;
+  
+  transform: translate(-50%, -50%) scale(1);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  color: white;
+  font-size: 2rem;
+  width: 90px;
+  height: 90px;
+  background: linear-gradient(to top left, hsl(193, 100%, 69%), hsl(200, 98%, 50%));
+  border-radius: 100%;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.window-order-ticket .window-button {
+  position: fixed;
+  top: 8rem;
+  right: -102px;
+  transform: translate(-50%, -50%);
+  transform: rotate(270deg);
+
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 1.111px;
+  background: white;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  height: 30px;
+  color: rgb(0, 174, 255);
+  box-shadow: rgba(0, 0, 0, 0.208) 0px 8px 4px 0px inset;
+}
