--- a/src/styles/css/header.css
+++ b/src/styles/css/header.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'OpenSans';
+  src: url(/src/fonts/Montserrat-VariableFont_wght.ttf);
+  font-weight: 500;
+
+  font-family: 'Montserrat';
+  src: url(/src/fonts/Montserrat-VariableFont_wght.ttf);
+  font-weight: 400;
+}
+
 header {
   background: rgb(0, 0, 0);
   padding: 52px 0px;
