--- a/src/styles/css/shortsAnonses.css
+++ b/src/styles/css/shortsAnonses.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'OpenSans';
+  src: url(/src/fonts/Montserrat-VariableFont_wght.ttf);
+  font-weight: 500;
+
+  font-family: 'Montserrat';
+  src: url(/src/fonts/Montserrat-VariableFont_wght.ttf);
+  font-weight: 400;
+}
+
 .shortsAnonses {
   padding-bottom: 150px;
 }
